Add related files feature and cleanup unused code